--- a/network-helper/Dockerfile
+++ b/network-helper/Dockerfile
@@ -4,7 +4,7 @@ LABEL version="1.0"
 LABEL maintaner="Daniel Molkov"
 LABEL promoted="true"
 
-RUN apt update && apt install net-tools
+RUN apt update && apt install net-tools -y && apt install curl -y
 
 RUN echo 'ping localhost &' > /bootstrap.sh
 RUN echo 'sleep infinity' >> /bootstrap.sh
