Added first test and added some fixes

--- a/network-helper/Dockerfile
+++ b/network-helper/Dockerfile
@@ -4,10 +4,16 @@ LABEL version="1.0"
 LABEL maintaner="Daniel Molkov"
 LABEL promoted="true"
 
-RUN apt update && apt install net-tools -y && apt install curl -y
+RUN TOOLS="net-tools curl python3 pip" && \
+    apt update && apt install $TOOLS -y
+
+RUN --mount=type=bind,source=test/requirements.txt,target=requirements.txt \
+    pip install -r requirements.txt
 
 RUN echo 'ping localhost &' > /bootstrap.sh
 RUN echo 'sleep infinity' >> /bootstrap.sh
 RUN chmod +x /bootstrap.sh
+
+COPY test/test.py test.py
 
 ENTRYPOINT [ "/bin/sh", "-c", "while :; do sleep 5; done" ]
