--- a/ping-client/Dockerfile
+++ b/ping-client/Dockerfile
@@ -29,7 +29,7 @@ ARG TARGETARCH
 # source code into the container.
 RUN --mount=type=cache,target=/go/pkg/mod/ \
     --mount=type=bind,source=src/ \
-    CGO_ENABLED=0 GOARCH=$TARGETARCH go build -o /bin/server
+    CGO_ENABLED=0 GOARCH=$TARGETARCH go build -o /bin/ping-client
 
 ################################################################################
 # Create a new stage for running the application that contains the minimal
@@ -76,4 +76,4 @@ COPY --from=build /bin/ping-client /bin/
 EXPOSE 8000
 
 # What the container should run when it is started.
-ENTRYPOINT [ "/bin/pingclient" ]
+ENTRYPOINT [ "/bin/ping-client" ]
