--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,13 @@
-# Testing a deploying on a single node
+# Testing a deploying on a single node with metrics
 version: "3.9"
 
 services:
   network-helper:
-    build: network-helper/
-    command: bash
+    container_name: network-helper
+    hostname: network-helper
+    build:
+      context: .
+      dockerfile: network-helper/Dockerfile
   server:
     container_name: ping-pong-server
     hostname: ping-pong-server
@@ -20,17 +23,11 @@ services:
   prometheus:
     container_name: prometheus
     image:  "bitnami/prometheus:latest"
+    hostname: prometheus
     volumes:
       - ./prometheus/config.yaml:/opt/bitnami/prometheus/conf/prometheus.yml
     ports:
       - 9090:9090
-  grafana:
-    image: grafana/grafana:latest
-    container_name: grafana
-    ports:
-    -  3000:3000
-    volumes:
-      - ./grafana/grafana.ini:/etc/grafana/grafana.ini
   # sqlServer:
   #   container_name: sqlserver2019
   #   image: mcr.microsoft.com/mssql/server:2019-latest
