--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
     hostname: ping-pong-server
     build: pong-server/
   client:
-    # container_name: ping-pong-client
+    container_name: ping-pong-client
     hostname: ping-pong-client
     deploy:
       replicas: 3
@@ -28,6 +28,13 @@ services:
       - ./prometheus/config.yaml:/opt/bitnami/prometheus/conf/prometheus.yml
     ports:
       - 9090:9090
+  # grafana:
+  #   image: grafana/grafana:latest
+  #   container_name: grafana
+  #   ports:
+  #   -  3000:3000
+  #   volumes:
+  #     - ./grafana/grafana.ini:/etc/grafana/grafana.ini
   # sqlServer:
   #   container_name: sqlserver2019
   #   image: mcr.microsoft.com/mssql/server:2019-latest
