--- a/prometheus/config.yaml
+++ b/prometheus/config.yaml
@@ -1,22 +1,22 @@
 global:
-  scrape_interval:     30s # By default, scrape targets every 15 seconds.
+  scrape_interval: 30s # By default, scrape targets every 15 seconds.
 
   # Attach these labels to any time series or alerts when communicating with
   # external systems (federation, remote storage, Alertmanager).
   external_labels:
-    monitor: 'codelab-monitor'
+    monitor: "codelab-monitor"
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
 scrape_configs:
   # The job name is added as a label `job=<job_name>` to any timeseries scraped from this config.
-  - job_name: 'prometheus'
+  - job_name: "prometheus"
     # Override the global default and scrape targets from this job every 5 seconds.
     scrape_interval: 10s
 
     static_configs:
       - targets:
-        - 'server:8000'
-        - 'ping-pong-client-1:8000'
-        - 'ping-pong-client-2:8000'
-        - 'ping-pong-client-3:8000'
+          - "server:8000"
+          - "ping-pong-client-1:8000"
+          - "ping-pong-client-2:8000"
+          - "ping-pong-client-3:8000"
